force-app/main/default/objects/Expense_Report__c/fields/Active_for_App__c.field-meta.xml
<CustomField>
    <fullName>Active_for_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active for App</label>
    <type>Checkbox</type>
</CustomField>