force-app/main/default/objects/Expense_Report__c/fields/Expense_Report_Folder__c.field-meta.xml
<CustomField>
    <fullName>Expense_Report_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Report Folder</label>
    <referenceTo>Expense_Report_Folder__c</referenceTo>
    <relationshipLabel>Expense Reports</relationshipLabel>
    <relationshipName>Expense_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>