force-app/main/default/objects/Expense_Report__c/fields/Hide_Income__c.field-meta.xml
<CustomField>
    <fullName>Hide_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Income</label>
    <type>Checkbox</type>
</CustomField>