force-app/main/default/objects/Expense_Report__c/fields/Spend_Total__c.field-meta.xml
<CustomField>
    <fullName>Spend_Total__c</fullName>
    <label>Spend Total</label>
    <summarizedField>Category__c.Spend_Total__c</summarizedField>
    <summaryForeignKey>Category__c.Expense_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>